--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ MYSQL_DB = 'nest_db'
 
 DATABASE_URL="mysql://kyhung:Kyhung98@@localhost:3360/nest_db"
 JWT_SECRET="secret_key"
+JWT_ACCESS_TOKEN='access_token'
+JWT_REFRESH_TOKEN='refresh_token'
+JWT_ACCESS_SECRET='access_secret'
+JWT_REFRESH_SECRET='refresh'
